<resources>
    <string name="app_name">TravelGuide for travelers v 1.3</string>
    <string name="btnReg">Register</string>
    <string name="btnLogin">Log in</string>
    <string name="btnFaceBookAuth">Facebook</string>
    <string name="txtWelcome">Welcome!</string>
    <string name="tvLogin">Login</string>
    <string name="tvPassword">Password</string>
    <string name="tvName">Name</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnGo">GO</string>
    <string name="facebook_app_id">374211683535457</string>
    <string name="fb_login_protocol_scheme">fb374211683535457</string>
    <string name="btn_add_local_photo">Add photo</string>
    <string name="tvGreetings">Welcome,</string>
    <string name="tvLocationPhrase">My current location is:</string>
    <string name="btnServices">Services</string>
    <string name="btnWeather">Get Weather</string>
    <string name="btnMapLocation">Map</string>
    <string name="tvLatPhrase">Lat:</string>
    <string name="tvLongPhrase">Long:</string>
    <string name="tvLong">LONGTITUDE</string>
    <string name="btnFreezeLoc">Freeze location</string>
    <string name="btnSendMsg">Send E-MAIL</string>
    <string name="btnMakeCall">Make call</string>
    <string name="btnSocialNetwrks">Social Networks</string>
    <string name="btnPhoto">Make photo</string>
    <string name="btnCurExchange">Currency Exchange</string>
    <string name="btnLockHistory">Local News</string>
    <string name="btnAcomHotels">Hotels</string>
    <string name="btnTransportPass">Tickets</string>
    <string name="btnTaxxis">Taxi</string>
    <string name="selected_item">Selected item:</string>
    <string name="tvBooking">Booking.com</string>
    <string name="tvAirBnB">airbnb.ru</string>
    <string name="tvTrivago">trivago.com</string>
    <string name="tvAgoda">agoda.com</string>
    <string name="tvUber">uber</string>
    <string name="tvUklon">uklon</string>
    <string name="tvGo">goibibi.com</string>
    <string name="tvMyTrip">makemytrip.com</string>
    <string name="tvSkyScanner">skyscanner.com</string>
    <string name="tvFB">facebook.com</string>
    <string name="tvTwitter">twitter.com</string>
    <string name="tvInstagram">instagram.com</string>
    <string name="btnReminder">Reminder</string>
    <string name="btnEmergency">Emergency</string>
    <string name="tvTurkey">Turkey</string>
    <string name="tvEgypt">Egypt</string>
    <string name="tvCyprus">Cyprus</string>
    <string name="tvGreece">Greece</string>
    <string name="tvAustralia">Australia</string>
    <string name="tvSpaine">Spaine</string>
    <string name="tvUK">United Kingdom</string>
    <string name="tvUAE">United Arab Emirates</string>
    <string name="tvIsrael">Israel</string>
    <string name="tvAmbulanceTurkey">Medical emergency/Ambulance:</string>
    <string name="tvAmbulanceTurkeyNumber">+90112</string>
    <string name="tvFireTurkey">Fire</string>
    <string name="tvFireTurkeyNumber">+90110</string>
    <string name="tvPoliceTurkey">Police</string>
    <string name="tvPoliceTurkeyNumber">+90155</string>
    <string name="tvCoastGuardTurkey">Coastguard</string>
    <string name="tvCoastGuardTurkeyNumber">+90158</string>
    <string name="tvForestFiresTurkey">Forest fires</string>
    <string name="tvForestFiresTurkeyNumber">+90177</string>
    <string name="tvMissChildTurkey">Missing child</string>
    <string name="tvMissChildTurkeyNumber">+90183</string>
    <string name="tvAmbulanceEgypt">Ambulance</string>
    <string name="tvAmbulanceEgyptNumber">+20123</string>
    <string name="tvFireDepEgypt">Fire Department</string>
    <string name="tvFireDepEgyptNumber">+20180</string>
    <string name="tvTouristPoliceEgypt">Tourist Police</string>
    <string name="tvTouristPoliceEgyptNumber">+20126</string>
    <string name="tvTrafficPoliceEgypt">Traffic Police</string>
    <string name="tvTrafficPoliceEgyptNumber">+20128</string>
    <string name="tvEmergencyPoliceEgypt">Emergency Police</string>
    <string name="tvEmergencyPoliceNumberEgypt">+20122</string>
    <string name="tvElectricityEmergencyEgypt">Electricity emergency</string>
    <string name="tvElectricityEgyptNumber">+20121</string>
    <string name="tvGasEmergencyEgypt">Natural Gas emergency</string>
    <string name="tvGasEgyptNumber">+20129</string>
    <string name="tvAmbulanceCyprus">Ambulance</string>
    <string name="tvAmbulanceCyprusNumber">+357199</string>
    <string name="tvFireDepCyprus">Fire Department</string>
    <string name="tvFireDepCyprusNumber">+357199</string>
    <string name="tvPoliceCyprus">Police</string>
    <string name="tvPoliceCyprusNumber">+357112</string>
    <string name="tvForestFireCyprus">Forest fire</string>
    <string name="tvForestFireCyprusNumber">+3571407</string>
    <string name="tvDrugsCyprus">Narcotics Emergency Services</string>
    <string name="tvDrugsCyprusNumber">+35790901401</string>
    <string name="tvAmbulanceGreece">Emergency medical servive</string>
    <string name="tvAmbulanceGreeceNumber">+30166</string>
    <string name="tvFireDepGreece">Fire brigade</string>
    <string name="tvFireDepGreeceNumber">+30199</string>
    <string name="tvPoliceGreece">Police</string>
    <string name="tvPoliceGreeceNumber">+30100</string>
    <string name="tvCoastGuardGreece">Coast guard</string>
    <string name="tvCoastGuardGreeceNumber">+30108</string>
    <string name="tvSocAssisGreece">Emergency social assistance</string>
    <string name="tvSocAssisGreeceNumber">+30197</string>
    <string name="tvPFAAustralia">Police/Fire/Ambulance</string>
    <string name="tvPFAAustraliaNumber">+61000</string>
    <string name="tvSESAustralia">SES assistance</string>
    <string name="tvSESAustraliaNumber">+61132500</string>
    <string name="tvEmergencyHelpLineAustralia">Emergency helpline</string>
    <string name="tvEmergencyHelpLineAustraliaNumber">+611300</string>
    <string name="tvMedFireSpaine">Ambulance/Fire Brigade</string>
    <string name="tvMedFireSpaineNumber">+34112</string>
    <string name="tvLocalPoliceSpaine">Local Police</string>
    <string name="tvLocalPoliceSpaineNumber">+34092</string>
    <string name="tvMaritimaSeaRescueSpaine">Maritime Sea Rescue</string>
    <string name="tvMaritimaSeaRescueSpaineNumber">+34900202202</string>
    <string name="tvRedCrossSpaine">Red cross</string>
    <string name="tvRedCrossSpaineNumber">+34902222292</string>
    <string name="tvTouristHelplineSpaine">Tourist Help line</string>
    <string name="tvTouristHelplineSpaineNumber">+34902102112</string>
    <string name="tvMedFirePoliceUK">Ambulance/Fire/Police</string>
    <string name="tvMedFirePoliceUKNumber">+44999</string>
    <string name="tvGasEmergencyUK">Gas Emergency</string>
    <string name="tvGasEmergencyUKNumber">+440800111999</string>
    <string name="tvNHSinUK">NHS Direct(24 hours)</string>
    <string name="tvNHSinUKNumber">+4408454647</string>
    <string name="tvPoliceUAE">Police</string>
    <string name="tvPoliceUAENumber">+971911</string>
    <string name="tvAmbulanceUAE">Ambulance</string>
    <string name="tvAmbulanceUAENumber">+971998</string>
    <string name="tvFireUAE">Fire Department</string>
    <string name="tvFireUAENumber">+971997</string>
    <string name="tvCoastGuardUAE">Coast Guard</string>
    <string name="tvCoastGuardUAENumber">+971996</string>
    <string name="tvElectroUAE">Electricity failure</string>
    <string name="tvElectroUAENumber">+971991</string>
    <string name="tvWaterUAE">Water failure</string>
    <string name="tvWaterUAENumber">+971992</string>
    <string name="tvPoliceIsrael">Police</string>
    <string name="tvPoliceIsraelNumber">+972100</string>
    <string name="tvAmbulanceIsrael">Ambulance</string>
    <string name="tvAmbulanceIsraelNumber">+972101</string>
    <string name="tvFireDepIsrael">Fire Department</string>
    <string name="tvFireDepIsraelNumber">+972102</string>
    <string name="tvElectroIsrael">Electric company</string>
    <string name="tvElectroIsraelNumber">+972103</string>
    <string name="btnRestorePassword">Restore password</string>
    <string name="btnShowPassword">Show password</string>
</resources>
