<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EgyptEmergencyActivity">

    <TextView
        android:id="@+id/tvGasEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="396dp"
        android:autoLink="phone"
        android:text="@string/tvGasEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGasEmergencyEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="396dp"
        android:text="@string/tvGasEmergencyEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvElectricityEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="334dp"
        android:autoLink="phone"
        android:text="@string/tvElectricityEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvElectricityEmergencyEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="334dp"
        android:text="@string/tvElectricityEmergencyEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTrafficPoliceEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="210dp"
        android:autoLink="phone"
        android:text="@string/tvTrafficPoliceEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmergencyPoliceEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="273dp"
        android:text="@string/tvEmergencyPoliceEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmergencyPoliceNumberEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="270dp"
        android:autoLink="phone"
        android:text="@string/tvEmergencyPoliceNumberEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTrafficPoliceEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="213dp"
        android:text="@string/tvTrafficPoliceEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTouristPoliceEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="152dp"
        android:autoLink="phone"
        android:text="@string/tvTouristPoliceEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTouristPoliceEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="152dp"
        android:text="@string/tvTouristPoliceEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAmbulanceEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="30dp"
        android:autoLink="phone"
        android:text="@string/tvAmbulanceEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFireDepEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="94dp"
        android:text="@string/tvFireDepEgypt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFireDepEgyptNumber"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="94dp"
        android:autoLink="phone"
        android:text="@string/tvFireDepEgyptNumber"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAmbulanceEgypt"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvAmbulanceEgypt"
        android:textStyle="bold" />

</RelativeLayout>